--- a/ashil.css
+++ b/ashil.css
@@ -2,13 +2,8 @@
     margin-left: 70px;margin-top: 70px;
     /* background-color: yellowgreen; */
 }
-.container-p{
-    margin-left: 80px;
-    margin-top: auto;
-    padding-left: 20px;
-    padding-top: 10px;
 
-}
+
 
 p{
     color: chocolate;
@@ -19,6 +14,49 @@ p{
     display: flex;
 }
 
+
+
+.home-page-h1{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-left: 100px;
+}
+
 ashil-editor{
-    background-color: bisque;
+    float: left;
+
+}
+
+
+ashil-editor.content {
+    flex: 1;
+  }
+.container-div{
+    margin-left: 70px;
+    margin-top: 70px;
+    margin-bottom: 30px;
+    width: 500px;
+    padding-bottom: 10px;
+    
+}
+.p-div{
+    width: 300px;
+    height: 200px;
+    margin: 10px 1  0px 10px 50px;
+}
+
+.container-p{
+    padding-left: 50px;
+}
+
+.home-page-h1{
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        margin-left: 100px;
+      }
+      body{
+        background-color: rgb(200, 218, 199)  ;
+      }
+   
+h2{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-style: normal;
 }
